Smart URL changes done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Ozara Deal</string>
-    <string name="app_url_https">https://ozaradeal.com/</string>
-    <string name="app_url">ozaradeal.com</string>
+    <string name="app_name">Smart URL</string>
+    <string name="app_url_https">https://reciclegoodclaninc.com/</string>
+    <string name="app_url">reciclegoodclaninc.com</string>
 </resources>
